--- a/app/src/main/res/layout/content_photo.xml
+++ b/app/src/main/res/layout/content_photo.xml
@@ -12,12 +12,21 @@
     tools:context="com.flor.photodrawing.PhotoActivity"
     tools:showIn="@layout/activity_photo">
 
+    <com.flor.photodrawing.TouchImageView
+        android:id="@+id/imv_photo"
+        android:layout_width="700sp"
+        android:layout_height="800sp"
+        android:layout_marginBottom="@dimen/medium"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter" />
+    <!--
     <it.sephiroth.android.library.imagezoom.ImageViewTouch
         android:id="@+id/imv_photo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="700sp"
+        android:layout_height="800sp"
         android:layout_marginBottom="@dimen/medium"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"/>
+        -->
 
 </RelativeLayout>
